--- a/index.html
+++ b/index.html
@@ -44,46 +44,50 @@
         }
     </style>
     <script>
-        function registrarAcesso() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const colaborador = urlParams.get("colaborador") || "";
-            const loja = urlParams.get("loja") || "matriz";
+       <script>
+<script>
+    function registrarAcesso() {
+        const params = new URLSearchParams(window.location.search);
+        const colaborador = params.get("colaborador") || "Desconhecido";
+        const loja = params.get("loja") || "matriz"; // Loja padrão
 
-            const lojas = {
-                "matriz": "https://g.page/r/CTOvEqoi8HrGEAI/review",
-                "conselheiro": "https://g.page/r/CaCxNxdjDi2CEAI/review",
-                "duque": "https://g.page/r/CSFs8PAHWrjZEAI/review",
-                "leblon": "https://g.page/r/CfGEX6uq6adiEAI/review",
-                "gavea": "https://g.page/r/CfgBGAIP_C-EEAI/review"
-            };
+        // Lista de links de avaliação por loja
+        const lojas = {
+            "matriz": "https://g.page/r/CTOvEqi08HrGEAI/review",
+            "conselheiro": "https://g.page/r/1a2B3cD4eF5gH6iJ7kL/review",
+            "duque": "https://g.page/r/XyZ123AbC456dEfG789/review",
+            "leblon": "https://g.page/r/456XYZ789ABCreview",
+            "barra": "https://g.page/r/987ZYX654DCBreview"
+        };
 
-            const linkDeAvaliacao = lojas[loja] || lojas["matriz"];
-            const apiUrl = "https://script.google.com/macros/s/AKfycbylWX7TIYN90y3UU2aP3xz_WBrsWiJgRjKZloZiW361nLhcxFjt82SInKPtEfgbfSs/exec";
+        // Verifica se a loja está cadastrada, caso contrário usa Matriz como padrão
+        const linkDeAvaliacao = lojas[loja] || lojas["matriz"];
 
-            const data = {
-                colaborador: colaborador,
-                loja: loja,
-                link: linkDeAvaliacao
-            };
+        // URL da API do Google Apps Script (coloque o link correto)
+        const url = "https://script.google.com/macros/s/AKfycbySpXmZNkHAaEn1YQPFGIBVmgCUOBVUxCrgntyiVIAa53uaWKkYR9ajim9nxzDe8sY/exec";
 
-            fetch(apiUrl, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log("Resposta da API:", data);
-                setTimeout(() => {
-                    window.location.href = linkDeAvaliacao;
-                }, 1000);
-            })
-            .catch(error => {
-                console.error("Erro ao enviar dados:", error);
-                alert("Erro ao registrar avaliação. Por favor, tente novamente.");
-            });
-        }
-    </script>
+        // Dados a serem enviados para o Google Sheets
+        const data = {
+    colaborador: colaborador ? colaborador : "",
+    loja: loja ? loja : "",
+    link: linkDeAvaliacao
+};
+
+// Envia os dados para o Google Sheets
+fetch(url, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(data)
+})
+.then(response => response.text())
+.then(data => console.log("Resposta da API:", data))
+.catch(error => console.error("Erro ao enviar dados:", error));
+        // Redireciona para a avaliação da loja correta após 1 segundo
+        setTimeout(function() {
+            window.location.href = linkDeAvaliacao;
+        }, 1000);
+    }
+</script>
 </head>
 <body onload="registrarAcesso()">
     <img src="https://raw.githubusercontent.com/DesignerRezende/avaliacoes-rezende/main/Logo%20Rezende%20Branca.png" alt="Rezende Materiais para Construção" class="logo">
