--- a/index.html
+++ b/index.html
@@ -44,47 +44,42 @@
         }
     </style>
     <script>
-        function registrarAcesso() {
-            const params = new URLSearchParams(window.location.search);
-            const colaborador = params.get("colaborador") || "Desconhecido";
-            const loja = params.get("loja") || "matriz"; // Loja padrão
-
-            // Lista de links de avaliação por loja
+      function registrarAcesso() {
+  const params = new URLSearchParams(window.location.search);
+  const colaborador = params.get("colaborador") || "Desconhecido";
+  const loja = params.get("loja") || "matriz";
             const lojas = {
                 "matriz": "https://g.page/r/CTOvEqoi8HrGEAI/review",
                 "conselheiro": "https://g.page/r/CaCxNxdjDi2CEAI/review",
                 "duque": "https://g.page/r/CSFs8PAHWrjZEAI/review",
                 "leblon": "https://g.page/r/CfGEX6uq6adiEAI/review",
-                "barra": "https://g.page/r/CfgBGAIP_C-EEAI/review"
+                "gavea": "https://g.page/r/CfgBGAIP_C-EEAI/review"
             };
 
             // Verifica se a loja está cadastrada, caso contrário usa Matriz como padrão
             const linkDeAvaliacao = lojas[loja] || lojas["matriz"];
 
             // URL da API do Google Apps Script (substitua pelo seu URL)
-            const url = "https://script.google.com/macros/s/AKfycbzJJX_jazgQuhs_mDCFVpNSLmPdDVg1hsoHj6ZHBIKNGcqz4qEYqZVaKsitBKjovUI/exec";
+            const url = "https://script.google.com/macros/s/AKfycbxXTuUNGqe0C9AgGLIQ8p7mcTZXonqGkuW6ZsFJ4SrP82DpjyZd4gfAd_QyPkM7_w/exec";
+ const data = {
+    colaborador: colaborador,
+    loja: loja,
+    link: linkDeAvaliacao
+  };
 
-            // Dados a serem enviados para o Google Sheets
-            const data = {
-                colaborador: colaborador,
-                loja: loja,
-                link: linkDeAvaliacao
-            };
+  fetch(url, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(data),
+    mode: 'no-cors'
+  })
+  .then(response => console.log("Resposta da API:", response))
+  .catch(error => console.error("Erro ao enviar dados:", error));
 
-            // Envia os dados para o Google Sheets
-            fetch(url, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.text())
-            .then(responseData => {
-                console.log("Resposta da API:", responseData);
-                // Redireciona para a avaliação da loja correta após 1 segundo
-                setTimeout(function() {
-                    window.location.href = linkDeAvaliacao;
-                }, 1000);
-            })
+  setTimeout(function() {
+    window.location.href = linkDeAvaliacao;
+  }, 1000);
+}
             .catch(error => {
                 console.error("Erro ao enviar dados:", error);
                 // Em caso de erro, redireciona imediatamente
