--- a/index.html
+++ b/index.html
@@ -48,57 +48,56 @@
             const params = new URLSearchParams(window.location.search);
             const colaborador = params.get("colaborador") || "Desconhecido";
             const loja = params.get("loja") || "matriz";
-            // NOVIDADE: Pega o link de avaliação diretamente da URL.
-            // Isso significa que sua planilha agora define qual link de avaliação será usado.
-            const linkDeAvaliacao = params.get("linkAvaliacao");
-
-            // Se por algum motivo o linkAvaliacao não for passado, redireciona para um padrão.
-            // É CRÍTICO que a planilha passe esse parâmetro corretamente agora!
-            if (!linkDeAvaliacao) {
-                console.error("Link de avaliação não encontrado na URL. Redirecionando para padrão.");
-                window.location.href = "https://g.page/r/CTOvEqoi8HrGEAI/review"; // Fallback para a Matriz
-                return; // Para a função aqui
-            }
 
             // SEU URL DO APPS SCRIPT AQUI (Cole o URL que você copiou da Parte 1, Passo 4)
-            const urlAppsScript = "https://script.google.com/macros/s/AKfycbw6afgS2zK0JPOk3-SC4LeJ7S98f5E7rVc35gkPIrZL6XbAVN49zmKqtYX6uXRq9cM/exec"; // Exemplo, USE O SEU!
+            const urlAppsScript = "https://script.google.com/macros/s/AKfycbykreHvxY2DITBP2QTpDjtxREHZ0yv5mz8s7lhI8VPmaExljTi5VFXsRRL5Wr-8xqo/exec"; // Exemplo, USE O SEU!
 
-            const data = {
+            const dataToSend = {
                 colaborador: colaborador,
-                loja: loja,
-                link: linkDeAvaliacao
+                loja: loja
             };
 
-            // Envia os dados para o Apps Script
+            let linkParaRedirecionar = "https://g.page/r/CTOvEqoi8HrGEAI/review"; // Fallback padrão para a Matriz
+
             fetch(urlAppsScript, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
-                // IMPORTANTE: Removemos 'mode: "no-cors"'. Isso permite que o navegador saiba se o Apps Script respondeu com sucesso.
-                body: JSON.stringify(data),
+                body: JSON.stringify(dataToSend),
             })
             .then(response => {
-                // Verifica se a requisição foi bem-sucedida (código de status 200-299)
+                // Verifica se a requisição foi bem-sucedida (código de status 2xx)
                 if (response.ok) {
-                    console.log("Dados enviados com sucesso para o Apps Script.");
+                    return response.json(); // Se OK, tenta ler a resposta como JSON
                 } else {
-                    console.error("Erro ao enviar dados para o Apps Script:", response.status, response.statusText);
-                    // Tenta ler a resposta para mais detalhes do erro
+                    // Se não for OK, tenta ler o erro para logar
+                    console.error("Erro na resposta do Apps Script:", response.status, response.statusText);
                     return response.text().then(text => {
                         console.error("Detalhes do erro do Apps Script:", text);
+                        throw new Error("Erro no servidor do Apps Script."); // Lança um erro para o catch
                     });
                 }
             })
+            .then(responseData => {
+                // Aqui recebemos os dados JSON do Apps Script
+                if (responseData && responseData.status === "sucesso" && responseData.link) {
+                    linkParaRedirecionar = responseData.link; // Usa o link retornado pelo Apps Script
+                    console.log("Link de avaliação recebido do Apps Script:", linkParaRedirecionar);
+                } else if (responseData && responseData.status === "aviso" && responseData.link) {
+                    linkParaRedirecionar = responseData.link; // Usa o link de fallback retornado
+                    console.warn("Apps Script retornou aviso:", responseData.message, "Usando link:", linkParaRedirecionar);
+                } else {
+                    console.error("Resposta inválida do Apps Script:", responseData);
+                    // Mantém o linkParaRedirecionar como o fallback padrão
+                }
+            })
             .catch(error => {
-                // Captura erros de rede ou outros problemas com o fetch
-                console.error("Erro de rede ao comunicar com Apps Script:", error);
+                console.error("Erro ao comunicar com Apps Script ou processar resposta:", error);
+                // O linkParaRedirecionar já é o fallback padrão definido no início.
             })
             .finally(() => {
-                // MUITO IMPORTANTE: O redirecionamento acontece SEMPRE, depois de tentar enviar os dados.
-                // Isso garante que o usuário não fique preso, mesmo se o registro falhar.
-                // Se você quisesse redirecionar APENAS se o registro for sucesso,
-                // moveria essa linha para dentro do primeiro .then(response => { ... })
-                console.log("Redirecionando para:", linkDeAvaliacao);
-                window.location.href = linkDeAvaliacao;
+                // Redireciona o usuário usando o link obtido ou o fallback.
+                console.log("Redirecionando para:", linkParaRedirecionar);
+                window.location.href = linkParaRedirecionar;
             });
         }
     </script>
